# gstreamer-tutorial

./: CMakeLists.txt  tutorial-01.c  tutorial-02.c  tutorial-03.c  tutorial-04.c  tutorial-05.c  tutorial-06.c  tutorial-07.c  tutorial-08.c  tutorial-09.c  tutorial-12.c  tutorial-13.c
playback/: playback-01.c  playback-02.c  playback-03.c  playback-04.c  playback-05.c  playback-06.c  playback-07.c
